<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.ivonicchio.catbreedsapp.viewModel.CatBreedDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorPrimary"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/v_color_below_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/breed_detail_color_below_toolbar_heigth"
                    android:background="@color/colorPrimary"
                    app:layout_constraintTop_toBottomOf="@id/toolbar" />

                <View
                    android:id="@+id/v_semi_circle_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/breed_detail_semi_circle_heigth"
                    android:layout_marginTop="@dimen/breed_detail_semi_circle_top_margin"
                    android:background="@drawable/semi_circle_top_layout"
                    app:layout_constraintTop_toTopOf="@id/v_color_below_toolbar" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_cat_breed_details_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    tools:visibility="visible"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_percent="0.4" />

                    <ImageView
                        android:id="@+id/iv_cat_image"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginHorizontal="@dimen/default_margin"
                        android:layout_marginBottom="@dimen/breed_detail_image_bottom_margin"
                        android:contentDescription="@string/cat_breed_detail_image_content_description"
                        app:layout_constraintBottom_toBottomOf="@id/guideline"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_breed_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/default_margin"
                        android:layout_marginTop="@dimen/breed_detail_title_margin_top"
                        android:text="@{viewModel.catBreed.name}"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/breed_detail_title_text_size"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/guideline"
                        tools:text="@string/breed_detail_name_helper_text" />

                    <TextView
                        android:id="@+id/tv_breed_origin_title"
                        style="@style/PrimaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/default_margin"
                        android:layout_marginTop="@dimen/default_margin"
                        android:text="@string/breed_detail_origin_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_breed_name" />

                    <TextView
                        android:id="@+id/tv_breed_origin"
                        style="@style/SecondaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/default_margin"
                        android:layout_marginTop="@dimen/breed_detail_message_title_distance"
                        android:text="@{viewModel.catBreed.origin}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_breed_origin_title"
                        tools:text="@string/breed_detail_country_helper_text" />

                    <TextView
                        android:id="@+id/tv_breed_temperament_title"
                        style="@style/PrimaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/default_margin"
                        android:layout_marginTop="@dimen/default_margin"
                        android:text="@string/breed_detail_temperament_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_breed_origin" />

                    <TextView
                        android:id="@+id/tv_breed_temperament"
                        style="@style/SecondaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/default_margin"
                        android:layout_marginTop="@dimen/breed_detail_message_title_distance"
                        android:text="@{viewModel.catBreed.temperament}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_breed_temperament_title"
                        tools:text="@string/breed_detail_temperament_helper_text" />

                    <TextView
                        android:id="@+id/tv_breed_description_title"
                        style="@style/PrimaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/default_margin"
                        android:layout_marginTop="@dimen/default_margin"
                        android:text="@string/breed_detail_description_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_breed_temperament" />

                    <TextView
                        android:id="@+id/tv_breed_description"
                        style="@style/SecondaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/default_margin"
                        android:layout_marginTop="@dimen/breed_detail_message_title_distance"
                        android:layout_marginBottom="@dimen/breed_detail_description_bottom_margin"
                        android:text="@{viewModel.catBreed.description}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_breed_description_title"
                        app:layout_constraintVertical_bias="0"
                        tools:text="@string/breed_detail_description_helper_text" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <include
            android:id="@+id/i_error_layout"
            layout="@layout/error_layout" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>