...
                    app:layout_constraintBottom_toBottomOf="@id/v_arc"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/v_arc" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_cat_breeds_name_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/main_screen_phone_list_top_margin"
                    android:layoutAnimation="@anim/rv_layout_animation"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
...
